--- a/css/main.css
+++ b/css/main.css
@@ -83,3 +83,16 @@ nav a:hover {
   }
 
 }
+
+@media only screen and (min-width: 38em) {
+
+  html {
+     font-size: 110%;
+     line-height: 1.4;
+  }
+
+  nav li {
+    width: 25%;
+  }
+
+}
