--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font: Ubuntu 100%/1.3 sans-serif;
+  font: normal 100%/1.3 Ubuntu, sans-serif;
 }
 
 *, *::before, *::after {
@@ -24,18 +24,18 @@ body {
 
 header {
   background-color: #18294f;
-  margin: 0;
-  padding-bottom: 5px;
+  color: #fff;
 }
 
-h1 {
-  font-family: Ubuntu, sans-serif;
+header h1 {
+  background-color: #18294f;
+  margin: 0;
   color: #fff;
+  font-family: Ubuntu, sans-serif;
   font-weight: bold;
   font-size: 2rem;
   text-decoration: none;
   text-align: center;
-  margin: 0;
   padding: .5em .75em;
 }
 
@@ -43,16 +43,18 @@ nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  font-size: 1.125rem;
 }
 
 nav li {
-text-align: left;
+  text-align: left;
 }
 
 nav a {
   display: block;
   padding: .5em .75em;
   background-color: #18294f;
+  white-space: nowrap;
   font-family: Ubuntu, sans-serif;
   color: #6c8fe0;
   font-size: 1.125rem;
@@ -68,8 +70,8 @@ nav a:hover {
 @media only screen and (min-width: 25em) {
 
   html {
-     font-size: 100%;
-     line-height: 1.3;
+    font-size: 100%;
+    line-height: 1.3;
   }
 
   nav ul {
@@ -87,12 +89,53 @@ nav a:hover {
 @media only screen and (min-width: 38em) {
 
   html {
-     font-size: 110%;
-     line-height: 1.4;
+    font-size: 110%;
+    line-height: 1.4;
   }
 
   nav li {
     width: 25%;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  header {
+    overflow: hidden;
+    background-color: #18294f;
+  }
+
+  h1 {
+    float: left;
+  }
+
+  nav ul {
+    float: right;
+    width: 60%;
+    margin: 1em 0;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
+  nav ul {
+    width: 40%;
+    float: right;
+  }
+
+  header {
+    background-color: #18294f;
   }
 
 }
